--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
 
     compile('com.googlecode.ez-vcard:ez-vcard:0.9.8') {
         exclude group: 'org.freemarker', module: 'freemarker'
@@ -29,5 +30,6 @@ dependencies {
     compile files('libs/dropbox-android-sdk-1.6.3.jar')
     compile files('libs/httpmime-4.0.3.jar')
     compile files('libs/json_simple-1.1.jar')
+    compile files('libs/protobuf-java-3.0.0-beta-2.jar')
 
 }
